Fix uses of font awesome and adjust browser filter spacing (#1896)

--- a/styles/less/global/global.less
+++ b/styles/less/global/global.less
@@ -38,7 +38,7 @@
         }
 
         &:before {
-            font-family: 'Font Awesome 6 Pro';
+            font-family: var(--font-awesome);
             content: '\f110';
             position: absolute;
             height: 100%;
