--- a/styles/less/ui/chat/sheet.less
+++ b/styles/less/ui/chat/sheet.less
@@ -195,7 +195,7 @@ fieldset.daggerheart.chat {
         &:before,
         &:after {
             content: '\f0d8';
-            font-family: 'Font Awesome 6 Pro';
+            font-family: var(--font-awesome);
         }
     }
     &.expanded {
